将页面中table的data-field字段命名规范化

--- a/souceCode/RSS/src/main/resources/templates/console/peopleManagement/waiterManagement.html
+++ b/souceCode/RSS/src/main/resources/templates/console/peopleManagement/waiterManagement.html
@@ -169,14 +169,14 @@
                                     <thead>
                                     <tr>
                                         <th data-field="id" class="W30" data-formatter="_formatte_id"><input id="doAllCheckBtn" type="checkbox" onclick="doAllCheck(this)"></th>
-                                        <th data-field="user_id"  class="W100" style="border:none;">微信ID</th>
-                                        <th data-field="login_id" class="W100" style="border:none;">登陆码</th>
+                                        <th data-field="userID"  class="W100" style="border:none;">微信ID</th>
+                                        <th data-field="loginID" class="W100" style="border:none;">登陆码</th>
                                         <th data-field="name"  class="W100" style="border:none;">名称</th>
                                         <th data-field="phoneNumber"  class="W100" style="border:none;">电话号码</th>
-                                        <th data-field="login_times" class="W100" style="border:none;">登录次数</th>
+                                        <th data-field="loginTimes" class="W100" style="border:none;">登录次数</th>
                                         <th data-field="enable" class="W100" style="border:none;">是否启动</th>
-                                        <th data-field="create_time"  class="W100" style="border:none;">创建时间</th>
-                                        <th data-field="update_time"  class="W100" style="border:none;">修改时间</th>
+                                        <th data-field="createTime"  class="W100" style="border:none;">创建时间</th>
+                                        <th data-field="updateTime"  class="W100" style="border:none;">修改时间</th>
                                     </tr>
                                     </thead>
 
