--- a/souceCode/RSS/src/main/resources/templates/console/peopleManagement/userManagement.html
+++ b/souceCode/RSS/src/main/resources/templates/console/peopleManagement/userManagement.html
@@ -169,13 +169,13 @@
                                     <thead>
                                     <tr>
                                         <th data-field="id" class="W30" data-formatter="_formatte_id"><input id="doAllCheckBtn" type="checkbox" onclick="doAllCheck(this)"></th>
-                                        <th data-field="user_id"  class="W100" style="border:none;">微信ID</th>
+                                        <th data-field="userId"  class="W100" style="border:none;">微信ID</th>
                                         <th data-field="name"  class="W100" style="border:none;">名称</th>
-                                        <th data-field="login_times" class="W100" style="border:none;">登录次数</th>
+                                        <th data-field="loginTimes" class="W100" style="border:none;">登录次数</th>
                                         <th data-field="level" class="W100" style="border:none;">等级</th>
                                         <th data-field="credit" class="W100" style="border:none;">信用分</th>
-                                        <th data-field="create_time"  class="W100" style="border:none;">创建时间</th>
-                                        <th data-field="update_time"  class="W100" style="border:none;">修改时间</th>
+                                        <th data-field="createTime"  class="W100" style="border:none;">创建时间</th>
+                                        <th data-field="updateTime"  class="W100" style="border:none;">修改时间</th>
                                     </tr>
                                     </thead>
 
