--- a/souceCode/RSS/src/main/resources/templates/console/foodManagement/foodManagement.html
+++ b/souceCode/RSS/src/main/resources/templates/console/foodManagement/foodManagement.html
@@ -173,7 +173,7 @@
                                         <th data-field="name" class="W100">名称</th>
                                         <th data-field="menuId" class="W100" style="border:none;">一级菜单名称</th>
                                         <th data-field="styles" class="W100"  data-formatter="_formatte_select">风味</th>
-                                        <th data-field="phoneNumber"  class="W100" style="border:none;">分配角色</th>
+                                        <th data-field="role"  class="W100" style="border:none;">分配厨师</th>
                                         <th data-field="enable" class="W100" style="border:none;">是否启动</th>
                                         <th data-field="createTime" class="W100" style="border:none;">创建时间</th>
                                         <th data-field="updateTime" class="W100" style="border:none;">修改时间</th>
